--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,10 @@
   "name": "yo-webapp",
   "private": true,
   "dependencies": {
+    "backbone": "~1.0",
     "bootstrap-sass-official": "~3.1.0",
     "jquery": "~1.11.0",
+    "requirejs": "~2.1.0",
     "underscore": "~1.6",
     "really-simple-colorpicker": "*"
   },
