--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "jquery": "~1.11.0",
     "requirejs": "~2.1.0",
     "underscore": "~1.6",
-    "really-simple-colorpicker": "*"
+    "really-simple-colorpicker": "*",
+    "almond": "*"
   },
   "devDependencies": {}
 }
