--- a/app/scripts/lib/ChartyConfigurer/chart-config.json
+++ b/app/scripts/lib/ChartyConfigurer/chart-config.json
@@ -54,7 +54,7 @@
         "name": "title"
       },
       {
-        "name": "tickInterval",
+        "name": "tickPixelInterval",
         "type": "integer"
       },
       {
